css/archive.scss
.archive-title {
  font-size: 2em;
  margin: 0;
  margin-top: .5em;
  margin-bottom: .25em;
  color: $font-color;
}

.archive-post-title {
  font-size: 1.4em;
  margin: 0;
  margin-bottom: .2em;
  
  a {
    color: $font-color;
    text-decoration: none;
    font-weight: bold;
  }
}

.archive-post {
  padding: 1em .5em;
  margin-bottom: 1.5em;
  background-color: #f9f9f9;
  border: 1px solid #eee;
  min-height: 150px;
  position: relative;
  border-radius: 2px;
}

.archive-meta {
  color: #666;
  margin-bottom: .5em;
  font-size: .9em;
}

.archive-image {
  float: left;
  width: 100%;
}

.archive-post-content {
  margin: 0;
  line-height: 1.3;
}

